@@ -1,8 +1,8 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Crop;
-import com.example.demo.entity.Farm;
 import com.example.demo.entity.Fertilizer;
+import com.example.demo.entity.Farm;
 import com.example.demo.entity.Suggestion;
 import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.SuggestionRepository;
@@ -10,19 +10,20 @@ import com.example.demo.service.CatalogService;
 import com.example.demo.service.FarmService;
 import com.example.demo.service.SuggestionService;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@Transactional
 public class SuggestionServiceImpl implements SuggestionService {
+
     private final FarmService farmService;
     private final CatalogService catalogService;
     private final SuggestionRepository suggestionRepository;
 
-    public SuggestionServiceImpl(FarmService farmService, CatalogService catalogService, SuggestionRepository suggestionRepository) {
+    public SuggestionServiceImpl(FarmService farmService,
+                                 CatalogService catalogService,
+                                 SuggestionRepository suggestionRepository) {
         this.farmService = farmService;
         this.catalogService = catalogService;
         this.suggestionRepository = suggestionRepository;
@@ -30,31 +31,40 @@ public class SuggestionServiceImpl implements SuggestionService {
 
     @Override
     public Suggestion generateSuggestion(Long farmId) {
+
         Farm farm = farmService.getFarmById(farmId);
-        List<Crop> suitableCrops = catalogService.findSuitableCrops(farm.getSoilPH(), farm.getWaterLevel(), farm.getSeason());
-        List<String> cropNames = suitableCrops.stream().map(Crop::getName).collect(Collectors.toList());
-        List<Fertilizer> fertilizers = catalogService.findFertilizersForCrops(cropNames);
-        List<String> fertilizerNames = fertilizers.stream().map(Fertilizer::getName).collect(Collectors.toList());
+
+        List<Crop> crops = catalogService.findSuitableCrops(
+                farm.getSoilPH(),
+                farm.getWaterLevel(),
+                farm.getSeason()
+        );
+
+        List<String> cropNames = crops.stream()
+                .map(Crop::getName)
+                .toList();
+
+        List<Fertilizer> fertilizers =
+                catalogService.findFertilizersForCrops(cropNames);
+
+        String cropsCsv = String.join(",", cropNames);
+
+        String fertCsv = fertilizers.stream()
+                .map(Fertilizer::getName)
+                .collect(Collectors.joining(","));
 
         Suggestion suggestion = Suggestion.builder()
                 .farm(farm)
-                .suggestedCrops(String.join(",", cropNames))
-                .suggestedFertilizers(String.join(",", fertilizerNames))
+                .suggestedCrops(cropsCsv)
+                .suggestedFertilizers(fertCsv)
                 .build();
 
         return suggestionRepository.save(suggestion);
     }
 
     @Override
-    public Suggestion getSuggestion(Long suggestionId) {
-        return suggestionRepository.findById(suggestionId)
+    public Suggestion getSuggestion(Long id) {
+        return suggestionRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Suggestion not found"));
     }
-
-
-    @Override
-public List<Suggestion> getSuggestionsByFarm(Long farmId) {
-    return suggestionRepository.findByFarmId(farmId);
-}
-
 }
